fix navbar padding for non mobile;

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -303,6 +303,7 @@ fieldset[disabled] .btn-xl.active {
         background-color: transparent;
     }
     .navbar-default .navbar-brand {
+        padding: 10px;
         font-size: 2em;
         -webkit-transition: all .3s;
         -moz-transition: all .3s;
